Maven setup fix, cleanup, additional tests